--- a/index.qmd
+++ b/index.qmd
@@ -27,3 +27,7 @@ options(tigris_class = "sf")
 myapikey <- "7ec164ce2e6d7eff05a3da72fa85dec41773e398"
 census_api_key(myapikey, overwrite = TRUE)
 ```
+
+```{r}
+mapview(X2018_mt_precinct_general, zcol = "party_detailed")
+```
